[gd_scene load_steps=3 format=2]

[ext_resource path="res://WorldElement/Thunder.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 300.0

[node name="Thunder" type="Node2D"]
script = ExtResource( 1 )

[node name="Node" type="Node" parent="."]

[node name="ThunderLineBig" type="Line2D" parent="Node"]
modulate = Color( 1.3, 1.3, 1.3, 1 )
joint_mode = 2
antialiased = true

[node name="ThunderLineSmall1" type="Line2D" parent="Node"]
modulate = Color( 1.3, 1.3, 1.3, 1 )
joint_mode = 2
antialiased = true

[node name="ThunderLineSmall2" type="Line2D" parent="Node"]
modulate = Color( 1.3, 1.3, 1.3, 1 )
joint_mode = 2
antialiased = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="SenceArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SenceArea"]
shape = SubResource( 1 )

[node name="EnemyBlastTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="SenceArea" to="." method="_on_SenceArea_body_entered"]
[connection signal="body_exited" from="SenceArea" to="." method="_on_SenceArea_body_exited"]
[connection signal="timeout" from="EnemyBlastTimer" to="." method="_on_EnemyBlastTimer_timeout"]
